fixed color contrast in ghost buttons and remember me

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -39,3 +39,8 @@
     font-weight: var(--bold);
     text-align: center;
 }
+
+.btn-ghost:hover{
+    color: var(--white);
+    background-color: var(--primary-dark);
+}
