--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -28,3 +28,7 @@ form{
 .remember-check{
     display: block;
 }
+
+.remember-check:focus-within label{
+    color: var(--primary-darker);
+}
